# shortener

./: .gitignore  CHANGELOG.md  Earthfile  README.md  cabal-common.project  cabal-wasm.project  cabal-wasm.project.freeze  cabal.project  cabal.project.freeze
.github/workflows/: build.yml
ci-scripts/: calc-cache-keys.js
shortener-common/: CHANGELOG.md  README.md  shortener-common.cabal
shortener-common/src/Web/URL/Shortener/: API.hs
shortener-frontend/: CHANGELOG.md  README.md  shortener-frontend.cabal
shortener-frontend/app/: Main.hs
shortener-frontend/data/: index.html  index.js
shortener-frontend/src/Web/URL/Shortener/: Frontend.hs
shortener-worker/: CHANGELOG.md  README.md  shortener-worker.cabal
shortener-worker/app/: Main.hs
shortener-worker/data/worker-template/: package.json  wrangler.toml
shortener-worker/data/worker-template/src/: worker.js
shortener-worker/src/Web/URL/Shortener/: Worker.hs
